<resources>

    <!--通用-->
    <string name="app_name">科智AR</string>
    <string name="classical_case">经典案例</string>
    <string name="user_center">个人中心</string>
    <string name="kezhi_site">科智官网</string>

    <!--经典案例-->
    <string name="ar_model">AR模型</string>
    <string name="short_video">短视频</string>
    <string name="high_quality_class">精品课堂</string>
    <string name="explore">探索</string>
    <string name="all_channel">全部栏目</string>
    <string name="high_quality_channel">精选栏目</string>
    <string name="special_channel">特色栏目</string>
    <string name="newest">最新</string>
    <string name="hottest">最热</string>
    <string name="most_user_collect">最多收藏</string>
    <string name="collect_btn">收藏</string>


    <string name="mediacontroller_play_pause">Play/Pause</string>

    <!--个人中心-->
    <string name="loginAndSign">登录/注册</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_upload">我的上传</string>
    <string name="account_manager">账号管理</string>
    <string name="clear_cache">清理缓存</string>
    <string name="version_info">版本信息</string>

    <!--登录-->
    <string name="login">登录</string>

    <!--我的收藏-->
    <string name="no_collection">暂无收藏</string>
    <string name="go_and_see">去看看 ></string>

    <!--版本信息-->
    <string name="update_now">立即升级</string>
    <string name="licence_1_line">©2009-2016重庆科智科技有限公司版权所有</string>
    <string name="licence_2_line">渝ICP备12006086号-3</string>


    <!--登录-->
    <string name="pwd_hint">密码</string>
    <string name="user_hint">用户名/手机号/邮箱</string>
    <string name="other_login">其他登录方式</string>
    <string name="register">注册账号</string>
    <string name="findpwd">忘记密码？</string>

    <!--注册账号-->
    <string name="register_tool_bar">注册</string>
    <string name="pmail_hint">输入手机号或邮箱</string>
    <string name="register_pwd_hint">输入登录密码</string>
    <string name="security_code_hint">输入验证码</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="have_account">已有账户？</string>

    <!--账号管理-->
    <string name="head_portrait">头像</string>
    <string name="username">昵称</string>
    <string name="WangXiaoer">王小二</string>
    <string name="password">密码</string>
    <string name="change_password">修改密码</string>
    <string name="change_phone">绑定手机号</string>
    <string name="change_mail">绑定邮箱</string>
    <string name="exit">退出登录</string>

    <!--修改昵称-->
    <string name="change_nickname">修改昵称</string>
    <string name="previous_nickname">原昵称</string>
    <string name="new_nickname">新昵称</string>
    <string name="new_nickname_hint">输入新昵称</string>
    <string name="save">保存</string>
    <string name="tip">昵称不能超过10个汉字或20个英文字符</string>

    <!--修改密码-->
    <string name="previous_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="previous_password_hint">输入原密码</string>
    <string name="new_password_hint">输入新密码</string>
    <string name="new_password_confirm_hint">确认新密码</string>
    <string name="submit_change">确认修改</string>


    <!--绑定手机-->
    <string name="previous_phone">原绑定手机</string>
    <string name="new_phone">新手机号码</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="new_phone_hint">输入新手机号</string>
    <string name="get_code">发送验证码</string>
    <string name="no_resource"></string>
    <!--绑定邮箱-->
    <string name="previous_mail">原绑定邮箱</string>
    <string name="new_mail">新邮箱地址</string>
    <string name="change_mail_address">绑定邮箱</string>
    <string name="new_mail_hint">输入新邮箱地址</string>
</resources>
