<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_light"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_change_nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        app:navigationIcon="@drawable/ic_left_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_nickname"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_previous_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:text="@string/previous_nickname"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:textColor="@color/grey_dark"
                android:text="王小二"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:text="@string/new_nickname"/>
            <EditText
                android:id="@+id/et_new_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:lines="1"
                android:background="@null"
                android:textColor="@color/grey_dark"
                android:hint="@string/new_nickname_hint"/>
            </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textColor="@color/grey_dark"
        android:layout_marginLeft="12dp"/>
</LinearLayout>
