<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/grey_light"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_change_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        app:navigationIcon="@drawable/ic_left_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/previous_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <TextView
                android:id="@+id/tv_previous_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:text="18375627712"
                android:textColor="@color/grey_dark"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/new_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <EditText
                android:id="@+id/et_new_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/font_middle"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/new_phone_hint"
                android:background="@null"
                android:textColor="@color/grey_dark"/>
            <View
                android:layout_width="1dp"
                android:background="@color/view_line"
                android:layout_height="13dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/green"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/security_code_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <EditText
                android:id="@+id/et_security_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:hint="@string/security_code_hint"
                android:lines="1"
                android:background="@null"
                android:textColor="@color/grey_dark"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_change_phone"
        android:background="@drawable/btn_selector"
        android:text="@string/submit_change"
        android:textColor="@color/white"
        android:textSize="@dimen/font_middle"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="25dp"/>
</LinearLayout>
