<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/grey_light"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        app:navigationIcon="@drawable/ic_left_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/previous_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <EditText
                android:id="@+id/et_previous_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1"
                android:hint="@string/previous_password_hint"
                android:textColor="@color/grey_dark"/>
            <CheckBox
                android:id="@+id/cb_change_pwd1"
                android:checked="false"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_cb_password"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:background="@null"
                android:textColor="@color/grey_dark"/>
            <CheckBox
                android:id="@+id/cb_change_pwd2"
                android:checked="false"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_cb_password"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"/>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/et_confirm_new_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_huge"
                android:hint="@string/new_password_confirm_hint"
                android:lines="1"
                android:background="@null"
                android:textColor="@color/grey_dark"/>
            <CheckBox
                android:id="@+id/cb_change_pwd3"
                android:checked="false"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_cb_password"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="12dp"
            android:background="@color/view_line"
            android:layout_marginLeft="12dp"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/btn_change_pwd"
        android:background="@drawable/btn_selector"
        android:text="@string/submit_change"
        android:textColor="@color/white"
        android:textSize="@dimen/font_middle"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="25dp"/>
</LinearLayout>
