<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_left_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_tool_bar"
            android:textSize="@dimen/font_middle"
            android:textColor="@color/black"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_register_pmail"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pmail"
        android:drawablePadding="12dp"
        android:background="@null"
        android:hint="@string/pmail_hint"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:background="@color/view_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_security_code"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="46dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_security_code"
            android:drawablePadding="12dp"
            android:background="@null"
            android:hint="@string/security_code_hint"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="82dp"
            android:layout_height="29dp"
            android:layout_marginRight="39dp"
            android:text="获取验证码"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:background="@drawable/btn_selector"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:background="@color/view_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
        android:id="@+id/et_register_pwd"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_key"
        android:background="@null"
        android:drawablePadding="12dp"
        android:hint="@string/register_pwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:lines="1"
        android:textSize="@dimen/font_middle" />
        <CheckBox
            android:id="@+id/cb_register_pwd"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_cb_password"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:background="@color/view_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/et_confirm_pwd"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_key"
        android:background="@null"
        android:drawablePadding="12dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:lines="1"
        android:textSize="@dimen/font_middle" />
        <CheckBox
            android:id="@+id/cb_register_confirm"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_cb_password"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:background="@color/view_line" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:layout_height="44dp"
        android:textColor="@color/white"
        android:text="@string/register_tool_bar"
        android:clickable="false"
        android:background="@drawable/btn_selector"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/green"/>
    </LinearLayout>


</LinearLayout>
