<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_account_manager"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        app:navigationIcon="@drawable/ic_left_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_manager"
            android:textColor="@color/white"
            android:textSize="@dimen/font_middle"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_head_portrait"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="头像"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_change_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center_vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_account_manager_user_head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_head"
                    app:civ_fill_color="@color/white"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/ic_right"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/view_line"/>

        <LinearLayout
            android:id="@+id/ll_change_nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|right">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:text="@string/username"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_change_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WangXiaoer"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/view_line"/>

        <LinearLayout
            android:id="@+id/ll_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|right">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:text="@string/password"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/view_line"/>

        <LinearLayout
            android:id="@+id/ll_change_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|right">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:text="@string/change_phone"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_change_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_phone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/view_line"/>

        <LinearLayout
            android:id="@+id/ll_change_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|right">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:text="@string/change_mail"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_change_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_phone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:text="@string/exit"
        android:textColor="@color/green"/>

</LinearLayout>